# real-time-vision-computing

./: .env.example  Dockerfile.api  Dockerfile.cv  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-api.txt  requirements-cv.txt  requirements-spark.txt  requirements.txt
api/: server.py
cv_service/: detector.py  ingest_nycdot.py  pipeline.py  producer.py  tracker.py
scripts/: create-topics.sh
