[project]
name = "real-time-vision-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "fastapi>=0.110.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.9.0",
    "pyspark>=3.5.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "ultralytics>=8.1.0",
    "uvicorn[standard]>=0.27.0",
]
